Erweiterung des Shortcode "portalmenu"
Der Shortcode "portalmenu" wurde um die Attribute "type" (default: 1) und "skewed" (default: false) erweitert. Bei "type='2'" wird als Bild das Thumbnail "post-thumb", bei "type='3'" das Thumbnail "gallery-full" verwendet. Bei "skewed='1'" wird die obere linke Ecke abgeschrägt.

--- a/css/sass/structure/navigation/_portalmenus.scss
+++ b/css/sass/structure/navigation/_portalmenus.scss
@@ -185,3 +185,164 @@
     }
 }
 
+/* START extension for REFRESH */
+#content .contentmenu.no-shadow img {
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+.contentmenu {
+  &.refresh {
+    .menu-item {
+      > div {
+    	   position: relative;
+      }
+      > div + p, > div + span.portaltop {
+      	position: absolute;
+      	bottom: 0;
+      	padding: 0;
+      	width: 100%;
+      }
+      span.portaltop {
+      	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%);
+      	width: 100%;
+      	padding: 0;
+      }
+      &:hover span.portaltop {
+      	background-color: rgba(0, 51, 102, 0.875);
+      }
+      span.portaltop a {
+      	color: #fff;
+      	line-height: 1.25;
+      	text-shadow: 1px 1px 3px black;
+      	display: block;
+      	padding: 8px 10px;
+        &:hover {
+        	text-decoration: none;
+        }
+      }
+    }
+    &.skewed {
+      .menu-item {
+        overflow: hidden;
+        &::after {
+          content: "";
+          width: calc(100% + 10px);
+          height: 5%;
+          position: absolute;
+          left: -5px;
+          top: -5%;
+          background: #fff;
+          transform-origin: right top;
+          transform: skewY(-1.75deg);
+          display: block;
+          overflow: hidden;
+        }
+      } // .skewed
+    } // .menu-item
+    &.contentmenutype2 {
+      &.skewed li a.image {
+        height: auto;
+      }
+      .subpages-menu {
+        @media (max-width: $screen-xs - 1){
+          li {
+            max-width: 220px;
+          }
+        }
+        @media (min-width: $screen-xs) and (max-width: $screen-sm - 1){
+          li {
+            max-width: 220px;
+            margin-right: calc(50% - 240px);
+    	     }
+        }
+      }
+    }
+    &.contentmenutype3 {
+      .subpages-menu {
+    	   margin-left: 15px;
+    	   margin-right: 15px;
+    	   overflow: hidden;
+        li {
+          width: 292px;
+          width: 31%;
+          margin-right: 32px;
+          margin-right: 3.333%;
+          margin-left: 0;
+          &.menu-item:nth-of-type(4n+1) {
+          	clear: unset;
+          	margin-left: 0;
+          }
+          &.menu-item:nth-of-type(3n) {
+          	margin-right: 0;
+          }
+          a.image {
+          	width: 100%;
+          	height: 400px;
+          	height: 32vw;
+          	height: 365px;
+          	max-width: 100%;
+          	max-height: 100vw;
+          	display: block;
+            img {
+             width: 100%;
+             height: 100%;
+             max-width: 90vw;
+             max-height: 100vw;
+             object-fit: cover;
+            } // img
+          } // a.image
+        } // li
+        .portaltop {
+        	font-size: 1.375em;
+        }
+        @media (min-width: $screen-xs) and (max-width: $screen-md - 1){
+          li {
+            width: 48.5%;
+            margin-right: 3%;
+            &.menu-item {
+          		clear: unset;
+          		margin-left: 0;
+              &:nth-of-type(2n) {
+            		margin-right: 0;
+            	} // :nth-of-type(2n)
+          	} // .menu-item
+          } // li
+        } // @media
+        @media (min-width: $screen-sm) and (max-width: $screen-md - 1){
+          li a.image {
+        		height: 50vw;
+        	}
+        } // @media
+        @media (min-width: $screen-xs) and (max-width: $screen-sm - 1){
+          li {
+            &.menu-item {
+          		clear: unset;
+          		margin-left: 0;
+          	}
+            a.image {
+          		height: 60vw;
+          	}
+        	}
+        } // @media
+        @media (max-width: $screen-xs){
+          li {
+        		margin-bottom: 20px;
+        		width: 100%;
+        		margin-right: 0;
+            a.image {
+             height: 100vw;
+           }
+          }
+        } // @media
+      }
+    } // .contentmenutype3
+    @media (max-width: $screen-xs){
+      li {
+        margin-bottom: 20px;
+      }
+    }
+  } // .refresh
+} // .contentmenu
+/* END extension for REFRESH */
