--- a/css/sass/frameworks/bootstrap/_scaffolding.scss
+++ b/css/sass/frameworks/bootstrap/_scaffolding.scss
@@ -26,7 +26,7 @@ html {
 
 body {
   font-family: $font-family-base;
-  font-size: $font-size-base;
+  font-size: #{$font-size-base}px;
   line-height: $line-height-base;
   color: $text-color;
   background-color: $body-bg;
