--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -1,36 +1,68 @@
 /*-----------------------------------------------------------------------------------*/
 /* Main menu
 /*-----------------------------------------------------------------------------------*/
-/* Primary Navigation */
+
 #nav {
+	background-color: $colorPrimary;
+	padding-bottom: 20px;
+
+	.meta-nav {
+		border-top: 1px solid #dde5f0;
+		display: block;
+		margin: 11px 15px 0 11px;
+	}
+
+	.sidebar-subnav {
+		float: none;
+
+		+ .meta-nav {
+			border-top: none;
+		}
+	}
+
+	.menu-header {
+		margin: 10px 0;
+		padding: 10px 0 0;
+	}
+
+	.meta-nav,
+	.menu-header {
+		a {
+			color: $colorPrimaryContrast;
+		}
+	}
+}
+
+/* Primary Navigation */
+.nav {
 	@include no-list;
 
 	/* All links & buttons */
 	a, [type=button] {
-		text-decoration: none;
-		color: $colorPrimary;
+		&, &:hover {
+			text-decoration: none;
+			color: $colorPrimaryContrast;
+		}
 	}
 
 	/* First-level items */
 	> li {
 		@include no-list;
-		/*display: block;*/
-		float: left;
 
 		/* Primary navigation toggle links / buttons */
 		> a,
 		> [type=button] {
 			display: block;
 			position: relative;
-			@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
+			@include px2rem($font-size-nav-mainlinks-small, $font-size-gridbase, $font-size-nav-mainlinks-small);
 			font-weight: bold;
-			//margin: 0 0 10px 0;
-			padding: 10px;
-			@include border-radius(4px);
+			padding: 10px 15px;
 
 			/* Necessary for force-click toggle buttons */
 			border: none;
 			background-color: transparent;
+			text-align: left;
+			width: 100%;
 		}
 
 		&.has-sub {
@@ -45,7 +77,8 @@
 					@extend .fa-caret-down;
 					position: absolute;
 					top: 11px;
-					right: 11px;
+					right: 15px;
+					display: none;
 				}
 			}
 
@@ -55,79 +88,35 @@
 				}
 			}
 
-			body:not(.mainnav-forceclick) & {
-				> a:focus + .nav-flyout,
-				> [type=button]:focus + .nav-flyout,
+			body:not(.mainnav-forceclick):not(.ismobile) & {
+				> a:focus ~ .nav-flyout,
+				> [type=button]:focus ~ .nav-flyout,
 				&:hover .nav-flyout {
 					display: block;
 				}
 			}
 
 			/* Must be an extra selector as IE / Edge doesn't support :focus-within and considers this invalid */
-			body:not(.mainnav-forceclick) &:focus-within .nav-flyout {
+			body:not(.mainnav-forceclick):not(.ismobile) &:focus-within .nav-flyout {
 				display: block;
 			}
 
-			> [type=button][aria-expanded=true] + .nav-flyout {
-				display: block;
-			}
-		}
-
-		/* Hover & focus states */
-		&.has-sub:hover > a,
-		&.has-sub:hover > [type=button],
-		> a:hover,
-		> a:focus,
-		> [type=button][aria-expanded=true],
-		> [type=button]:hover,
-		> [type=button]:focus {
-			color: $colorMainMenu;
-			background-color: $colorPrimary;
-		}
-
-		/* Must be an extra selector as IE / Edge doesn't support :focus-within and considers this invalid */
-		&.has-sub:focus-within > a,
-		&.has-sub:focus-within > [type=button] {
-			color: $colorMainMenu;
-			background-color: $colorPrimary;
-		}
-
-		body.mainnav-forceclick & {
-			> a:hover,
-			> a:focus,
-			> [type=button]:hover,
-			> [type=button]:focus {
-				background-color: $colorHover;
-			}
-
-			// Overwrite for "active" button
 			> [type=button][aria-expanded=true] {
-				background-color: $colorPrimary;
+				&:before {
+					@extend .fa-caret-up;
+				}
+
+				~ .nav-flyout {
+					display: block;
+				}
 			}
 		}
 	}
 
-	/* Questions
-
-	- li.level1 a.clicked-once
-
-	 */
-
 	/* Fly-Out / secondary navigation */
 	.nav-flyout {
-		display: none;
-		position: absolute;
-		z-index: 30;
-		top: 130px;
-		left: 0;
-		right: 0;
-		background: $colorPrimary;
+		background-color: $colorPrimary;
 		padding: 20px 0;
-		@include box-shadow(0 10px 10px rgba(0, 0, 0, 0.3));
-
-		@media (min-width: $screen-md) {
-			top: 90px;
-		}
 	}
 
 	/* Portal buttons */
@@ -194,30 +183,6 @@
 		}
 	}
 
-	/* When does this happen?
-	.flyout-entries-full ul.sub-menu {
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: column;
-		justify-content: flex-start;
-		max-height: 250px;
-		align-items: flex-start;
-
-		li {
-			width: 30%;
-		}
-
-		#off-canvas & {
-			display: block;
-			height: auto;
-
-			li {
-				width: inherit;
-			}
-		}
-	}
-	*/
-
 	.introtext-full,
 	.introtext {
 		p {
@@ -226,7 +191,6 @@
 			margin: 0;
 			color: #fff;
 			opacity: .7;
-
 			font-style: normal;
 			font-weight: normal;
 		}
@@ -256,7 +220,6 @@
 				font-size: 90px;
 			}
 		}
-
 	}
 
 	.introthumb {
@@ -280,9 +243,8 @@
 }
 
 .mainnav-plainview {
-	#nav {
+	.nav {
 		ul {
-
 			margin-bottom: 0;
 
 			&.level2 > li {
@@ -298,6 +260,7 @@
 					font-weight: bold;
 					border-bottom-color: $PalettonDunkler;
 					padding-left: 0;
+
 					&:before {
 						display: none;
 					}
@@ -324,33 +287,30 @@
 	}
 }
 
-/* New Toogle Button */
-#wrap #mainnav-toggle {
-	position: fixed;
+#mainnav-toggle {
+	position: absolute;
 	right: 10px;
 	top: 0;
 	@include px2rem($font-size-mobile-meta);
-	background: transparent;
+	background-color: transparent;
 	border: none;
-	display: none;
 	z-index: 100;
 	color: $colorMeta;
 	padding: 1px 6px;
-
-	@media (max-width: $screen-sm - 1) {
-		.js & {
-			display: block;
-		}
-	}
+	display: none;
 
 	span {
 		@include hideout();
 	}
-}
 
-#mainnav-toggle:before {
-	@extend .fa;
-	@extend .fa-bars;
+	&:before {
+		@extend .fa;
+		@extend .fa-bars;
+	}
+
+	&[aria-expanded=true]:before {
+		@extend .fa-close;
+	}
 }
 
 /* Very small device */
@@ -361,147 +321,141 @@
 			top: 0;
 			position: relative;
 		}
-
-		/*
-		#nav {
-			.nav-flyout {
-				display: block;
-				position: relative;
-				float: none;
-				width: 100%;
-				top: inherit;
-				margin: 5px 0;
-				padding: 3px;
-			}
-
-			li {
-				float: none;
-				display: block;
-				margin: 0;
-				padding: 0;
-
-				a {
-					float: none;
-					padding: 0;
-
-					:hover {
-						text-decoration: underline;
-						background: none;
-					}
-				}
-
-				.nav-flyout a.button-portal {
-					color: #fff;
-					text-align: center;
-					margin: 0 10px;
-				}
-			}
-
-			li.level1:hover,
-			.nav-flyout,
-			.nav-flyout:hover {
-				background: none !important;
-				box-shadow: none;
-				margin: 0;
-			}
-		}
-*/
 	}
 }
 
 /* Medium sized device */
 @media (max-width: $screen-sm - 1) {
-	body.js-enabled {
-		&.menu-toggled {
-			#wrap,
-			#footer,
-			.main-content-container {
-				-webkit-transform: translate3d(-250px, 0, 0);
-				transform: translate3d(-250px, 0, 0);
-			}
-		}
-
-		#wrap, #footer, .main-content-container {
-			-webkit-transform: translate3d(0, 0, 0);
-			transform: translate3d(0, 0, 0);
-			-webkit-transition: -webkit-transform 240ms;
-			transition: transform 240ms;
-		}
-
-		/*
-		#nav {
-			.nav-flyout {
-				display: block;
-				overflow: hidden;
-				box-sizing: border-box;
-				max-height: 0;
-				padding: 0;
-				-webkit-transition: all 500ms;
-				transition: all 500ms;
-
-				a {
-					color: $colorStandardHellgrau;
-				}
-
-				.container {
-					padding: 10px;
-				}
-			}
-
-			.focus {
-				.nav-flyout {
-					max-height: 1000px;
-				}
-			}
-		}
-		*/
+	/* If there's no JavaScript available */
+	#nav {
+		display: none;
 	}
+	.nav > li.has-sub {
+		> a,
+		> [type=button] {
+			&:hover {
+				background-color: $colorHover;
+			}
+		}
+	}
+
+	.no-js #nav:target,
+	[aria-expanded=true] + #nav {
+		display: block;
+	}
+
 	.js {
-		/*
-		#nav {
-			margin: 10px 0 0 0;
+		.nav-flyout {
 			display: none;
+		}
 
-			&.toggled {
-				display: block;
-			}
+		#nav {
+			position: absolute;
+			width: 100%;
+			z-index: 11;
+		}
 
-			li.level1 {
-				display: block;
-				float: none;
-				margin: 0;
-				border-bottom: 1px solid #ccc;
+		.nav > li.has-sub {
+			> a,
+			> [type=button] {
+				@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
 
-
-				a {
+				&:before {
 					display: block;
-					float: none;
-					@include border-radius(0);
-					margin-bottom: 0;
+				}
+			}
+		}
+	}
+
+	#mainnav-toggle {
+		display: block;
+	}
+}
+
+/* Large device */
+@media (min-width: $screen-sm) {
+	#nav {
+		background-color: transparent;
+	}
+
+	.nav {
+		/* All links & buttons */
+		a, [type=button] {
+			color: $colorPrimary;
+		}
+
+		> li {
+			float: left;
+
+			> a,
+			> [type=button] {
+				padding: 10px;
+				@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
+				@include border-radius(4px);
+			}
+
+			&.has-sub {
+				> a,
+				> [type=button] {
+					&:before {
+						display: block;
+						right: 11px;
+					}
 				}
 			}
 
-			li.level2 {
-				background-position: left 6px;
+			/* Hover & focus states */
+			&.has-sub:hover > a,
+			&.has-sub:hover > [type=button],
+			> a:hover,
+			> a:focus,
+			> [type=button][aria-expanded=true],
+			> [type=button]:hover,
+			> [type=button]:focus {
+				color: $colorMainMenu;
+				background-color: $colorPrimary;
+			}
 
-				a {
-					display: table;
+			/* Must be an extra selector as IE / Edge doesn't support :focus-within and considers this invalid */
+			&.has-sub:focus-within > a,
+			&.has-sub:focus-within > [type=button] {
+				color: $colorMainMenu;
+				background-color: $colorPrimary;
+			}
+
+			body.mainnav-forceclick & {
+				> a:hover,
+				> a:focus,
+				> [type=button]:hover,
+				> [type=button]:focus {
+					background-color: $colorHover;
+				}
+
+				// Overwrite for "active" button
+				> [type=button][aria-expanded=true] {
+					background-color: $colorPrimary;
 				}
 			}
-
-			.nav-flyout {
-				position: relative;
-				top: 0;
-				left: 0;
-				right: 0;
-				padding: 10px 0;
-			}
 		}
 
-
-		body.admin-bar #nav .nav-flyout {
-			top: 0;
+		/* Fly-Out / secondary navigation */
+		.nav-flyout {
+			display: none;
+			position: absolute;
+			z-index: 30;
+			left: 0;
+			right: 0;
+			top: 130px;
+			@include box-shadow(0 10px 10px rgba(0, 0, 0, 0.3));
 		}
-		*/
+	}
+}
+
+/* Large device */
+@media (min-width: $screen-md) {
+	.nav {
+		.nav-flyout {
+			top: 90px;
+		}
 	}
 }
