--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -3,32 +3,57 @@
 /*-----------------------------------------------------------------------------------*/
 
 #nav {
-	background-color: $colorPrimary;
-	padding-bottom: 20px;
+	background-color: $colorStandardHellgrau;
 
 	.meta-nav {
-		border-top: 1px solid #dde5f0;
+		border-top: 1px solid #ccc;
+		color: $colorPrimary;
 		display: block;
-		margin: 11px 15px 0 11px;
+		padding: 15px 11px;
+		margin-bottom: 0;
 	}
 
 	.sidebar-subnav {
+		border-top: 1px solid #ccc;
 		float: none;
+		padding: 15px 0 0;
+		background-color: darken($colorSubNavBackground, 5%);
 
-		+ .meta-nav {
-			border-top: none;
+		a {
+			background-color: darken($colorSubNavBackground, 5%);
 		}
 	}
 
 	.menu-header {
-		margin: 10px 0;
-		padding: 10px 0 0;
+		@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
+		margin: 0;
+		border-top: none;
+
+		&, & a {
+			color: $colorPrimary;
+		}
+
+		.screen-reader-text {
+			position: static;
+		}
 	}
 
-	.meta-nav,
-	.menu-header {
-		a {
-			color: $colorPrimaryContrast;
+	#subnav {
+		font-size: 1rem;
+
+		li {
+			border-bottom: none;
+			border-top: 1px solid #fff;
+		}
+
+		.current_page_item a {
+			background-color: $colorPrimary;
+		}
+
+		a, .current_page_item a {
+			&:hover, &:focus {
+				background-color: $colorHover;
+			}
 		}
 	}
 }
@@ -39,8 +64,10 @@
 
 	/* All links & buttons */
 	a, [type=button] {
-		&, &:hover {
-			text-decoration: none;
+		text-decoration: none;
+		color: $colorPrimary;
+
+		&:hover, &:focus, &[aria-expanded=true] {
 			color: $colorPrimaryContrast;
 		}
 	}
@@ -79,6 +106,7 @@
 					top: 11px;
 					right: 15px;
 					display: none;
+					transition: transform .2s ease-in-out;
 				}
 			}
 
@@ -103,7 +131,7 @@
 
 			> [type=button][aria-expanded=true] {
 				&:before {
-					@extend .fa-caret-up;
+					transform: rotate(-180deg);
 				}
 
 				~ .nav-flyout {
@@ -329,14 +357,47 @@
 	/* If there's no JavaScript available */
 	#nav {
 		display: none;
+		//border-top: 1px solid $PalettonHellste;
 	}
-	.nav > li.has-sub {
-		> a,
-		> [type=button] {
-			&:hover {
-				background-color: $colorHover;
+
+	.nav {
+		.nav-flyout {
+			padding-top: 0;
+		}
+
+		> li {
+			border-top: 1px solid #ccc;
+
+			&.has-sub {
+				> a,
+				> [type=button] {
+					&[aria-expanded=true] {
+						background-color: $colorPrimary;
+					}
+
+					&:hover, &:focus {
+						background-color: $colorHover;
+					}
+				}
 			}
 		}
+	}
+
+	.flyout-entries {
+		padding: 0;
+
+		ul a {
+			padding-left: 30px;
+			padding-right: 35px;
+		}
+
+		.button-portal {
+			margin-left: 15px;
+		}
+	}
+
+	.level2 {
+		border-top: 1px solid #1f4c7a;
 	}
 
 	.no-js #nav:target,
