Fix minor menu glitches

--- a/css/sass/structure/header/_branding.scss
+++ b/css/sass/structure/header/_branding.scss
@@ -16,7 +16,7 @@
 	}
 
 	@media (max-width: $screen-sm - 1) {
-		body:not(.md-showsitelogo) & {
+		.js body:not(.md-showsitelogo) & {
 			background-color: $colorPrimary;
 
 			img,
