--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -81,7 +81,8 @@
 		> [type=button] {
 			display: block;
 			position: relative;
-			@include px2rem($font-size-nav-mainlinks-small, $font-size-gridbase, $font-size-nav-mainlinks-small);
+			//@include px2rem($font-size-nav-mainlinks-small, $font-size-gridbase, $font-size-nav-mainlinks-small);
+			@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
 			font-weight: bold;
 			padding: 10px 15px;
 
@@ -424,7 +425,7 @@
 		.nav > li.level1 {
 			> a,
 			> [type=button] {
-				@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
+				//@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
 
 				&:before {
 					display: block;
@@ -456,7 +457,7 @@
 			> a,
 			> [type=button] {
 				padding: 10px;
-				@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
+				//@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
 				@include border-radius(4px);
 			}
 
