--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -311,7 +311,11 @@
 		}
 
 		.nav-flyout {
-			background: url("./img/siegel-zuv-schnitt.png") no-repeat 100% bottom, linear-gradient(to top, #005599 0%, #036 100%);
+			background: url("./img/siegel-zuv-schnitt.png") no-repeat 95% bottom, linear-gradient(to top, #005599 0%, #036 100%);
+			@media (min-width: $screen-sm) {
+			    min-height: 199px;
+			}
+			
 		}
 	}
 }
