--- a/css/sass/_printer.scss
+++ b/css/sass/_printer.scss
@@ -202,6 +202,10 @@
 	.footer-logo {
 	    margin-top: 10px;
 	}
+	
+	.socialmedia {
+	    display: none;
+	}
     }
     footer:before {
 	content: 'Hinweis: Interaktive Teile der Webseite sind im Druck nicht sichbar. Bitte schonen Sie die Umwelt und vermeiden unnötige Ausdrücke.';
