--- a/css/sass/plugins/_cms-workflow.scss
+++ b/css/sass/plugins/_cms-workflow.scss
@@ -3,114 +3,112 @@
 /* https://github.com/RRZE-Webteam/cms-workflow
 /*-----------------------------------------------------------------------------------*/
 
-
 /* Language switcher */
-
 .cms-workflow-widget {
-    @include border-radius(20px);
-    background: #fff;
-    
-    &:hover, 
-    &:focus, 
-    &:focus-within {
-	background: $colorMetaLightest;
-	@include box-shadow(0 0 5px rgba(0,0,0,0.2));
-    }
+	@include border-radius(20px);
+	background: #fff;
+
+	&:hover,
+	&:focus,
+	&:focus-within {
+		background: $colorMetaLightest;
+		@include box-shadow(0 0 5px rgba(0, 0, 0, 0.2));
+	}
 }
 
 .mlp_language_box {
-    padding: 0 5px;
-    margin: 0;   
-    @include inline-block();
-    z-index: 200;
-    overflow: hidden;
-    height: 30px;
-
-    &:before {
-	@extend .fa;
-	@extend .fa-language;
-	@include px2rem(21);
-	
-    }
-    
-   
-    
-    &:hover, 
-    &:focus {	
-	height: auto;
-	 z-index: 202;
-	ul {
-	    height: auto;
-	}
-    }
-    
-    ul {
-	@include no-list;
-	z-index: 201;
-	display: inline;
+	padding: 0 5px;
 	margin: 0;
-	
-	@media (min-width: $screen-lg) {
-	    margin: 0 5px;
-	}
-	
-	li {
-	    @include no-list;
-	    text-align: left;
-	    padding: 5px;
-	    display: inline-block;
-	    width: 30px;
-	    height: 20px;
-	    overflow: hidden; 
-	    @media (min-width: $screen-lg) {
-	//	    min-width: 60px;
-		    width: auto;
-		    max-width: 100px;
-	    }
-	    a {
-		text-align: left;
-		text-decoration: none;
-		text-transform: uppercase;
-		font-weight: bold;
-		color: $colorMeta;
-	    }
-	    a::before {
-		width: 30px;
-		content: attr(hreflang);
-		display: inline;
-		margin-right: 30px;
-		@media (min-width: $screen-lg) {
-		    content: "";
-		    margin-right: 0px;
-		    width: 0;
-		}
-	    }	
+	@include inline-block();
+	z-index: 200;
+	overflow: hidden;
+	height: 30px;
 
-			
-	    a.ext-link {
-		background-image: none;
-	    }
-	    
-	    &.current  {
-	        display: none;
-	    }
-	   
+	&:before {
+		@extend .fa;
+		@extend .fa-language;
+		@include px2rem(21);
+
 	}
-		
-		
-		
-		
+
+
+	&:hover,
+	&:focus {
+		height: auto;
+		z-index: 202;
+
+		ul {
+			height: auto;
+		}
 	}
+
+	ul {
+		@include no-list;
+		z-index: 201;
+		display: inline;
+		margin: 0;
+
+		@media (min-width: $screen-lg) {
+			margin: 0 5px;
+		}
+
+		li {
+			@include no-list;
+			text-align: left;
+			padding: 5px;
+			display: inline-block;
+			width: 30px;
+			height: 20px;
+			overflow: hidden;
+			@media (min-width: $screen-lg) {
+				//	    min-width: 60px;
+				width: auto;
+				max-width: 100px;
+			}
+
+			a {
+				text-align: left;
+				text-decoration: none;
+				text-transform: uppercase;
+				font-weight: bold;
+				color: $colorMeta;
+			}
+
+			a::before {
+				width: 30px;
+				content: attr(hreflang);
+				display: inline;
+				margin-right: 30px;
+				@media (min-width: $screen-lg) {
+					content: "";
+					margin-right: 0px;
+					width: 0;
+				}
+			}
+
+
+			a.ext-link {
+				background-image: none;
+			}
+
+			&.current {
+				display: none;
+			}
+
+		}
+	}
+
 	h2 {
-	    @include hideout;
+		@include hideout;
 	}
 }
+
 #wrap .cms-workflow-widget {
-    @media (max-width: $screen-sm - 1) {
-	position: fixed;
-	top: 0;
-	right: 50px;
-	margin: 4px 0;
-	background-color: transparent;  
-    }
+	@media (max-width: $screen-sm - 1) {
+		position: absolute;
+		top: 0;
+		right: 50px;
+		margin: 4px 0;
+		background-color: transparent;
+	}
 }
