--- a/css/sass/_printer.scss
+++ b/css/sass/_printer.scss
@@ -8,7 +8,7 @@
     }
 
     
-       
+   
     abbr[title]:after {
 	content: " (" attr(title) ")";
     }
@@ -147,6 +147,9 @@
 	    display: none;
 	}
     }
+    
+    
+     #wpadminbar,
     .widget_archive,
     .widget widget_nav_menu,
     .widget_categories,
