replaced caroufredslider with slick and added shortcode func for imagelinks

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -48,6 +48,10 @@ $colorContentBorders: #dfe6ec;
 $colorContentRegions: #f5f7f9;
 // FAU: lighten($colorZUV, 4%);
 
+$colorShadows:	rgba(135,132,135,1);
+// Color for shadows
+
+
 // Define defaults and variables
 $colorPrimary: $colorZUV;
 $colorPrimaryContrast: #fff;
