replaced caroufredslider with slick and added shortcode func for imagelinks

--- a/css/sass/structure/navigation/_navigation.scss
+++ b/css/sass/structure/navigation/_navigation.scss
@@ -17,8 +17,8 @@
 @import "portalmenus";
 
 // Top-Links
-@import "logos-menu";
-
+// @import "logos-menu";
+// deprecated since 1.10.57
 
 // Quicklinks
 @import "skiplinks";
