- bugfix css for items in menu - bugfix size menu items in overlay

--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -273,6 +273,15 @@
 
 /* Large device */
 @media (min-width: $screen-sm) {
+	.mainnav-defaultview {
+	    .header-menu {
+		.flyout-entries-full {
+		    ul.sub-menu li {
+			 width: 30%;
+		    }
+		}
+	    }
+	}
 	.mainnav-plainview {
 		.nav {
 			ul {
