--- a/css/sass/structure/header/_meta.scss
+++ b/css/sass/structure/header/_meta.scss
@@ -85,13 +85,14 @@
 	display: inline-block;
 	float: right;
 
-	margin: 5px 0 5px 5px;
+	margin: 5px 30px 5px 5px;
 	height: 30px;
 	max-width: 90px;
 
 	@media (min-width: $screen-md) {
 		max-width: inherit;
 		margin-left: 15px;
+		margin-right: 0;
 	}
 
 }
