--- a/css/sass/structure/header/_meta.scss
+++ b/css/sass/structure/header/_meta.scss
@@ -88,12 +88,15 @@
 	margin: 5px 30px 5px 5px;
 	height: 30px;
 	max-width: 90px;
-
+	
+	@media (min-width: $screen-sm) {
+	    margin-right: 0;
+	    margin-left: 15px;
+	}
 	@media (min-width: $screen-md) {
 		max-width: inherit;
-		margin-left: 15px;
-		margin-right: 0;
 	}
+	
 
 }
 
