--- a/style.css
+++ b/style.css
@@ -2548,7 +2548,8 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 @media (max-width: 767px) { .active-meta-widget .meta-tools { position: absolute; top: 0; left: 0; right: 0; } }
 
 .meta-widget { display: inline-block; float: right; margin: 5px 30px 5px 5px; height: 30px; max-width: 90px; }
-@media (min-width: 992px) { .meta-widget { max-width: inherit; margin-left: 15px; margin-right: 0; } }
+@media (min-width: 768px) { .meta-widget { margin-right: 0; margin-left: 15px; } }
+@media (min-width: 992px) { .meta-widget { max-width: inherit; } }
 
 /*-----------------------------------------------------------------------------------*/
 /* Search in Header 
@@ -3884,6 +3885,8 @@ img.aligncenter { display: block; margin: 0 auto 10px auto; }
 .jumplinks li a { position: absolute; width: 1px; height: 1px; padding: 0; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; }
 .jumplinks li a:active, .jumplinks li a:focus { position: static; width: auto; height: auto; overflow: visible; clip: auto; white-space: normal; }
 .jumplinks li a:active, .jumplinks li a:hover, .jumplinks li a:focus { position: absolute; z-index: 100; background: #003366; color: #fff; box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); padding: 1.2em 1em; top: -20px; left: 0; right: 0; margin: 0 auto; text-align: center; width: 100%; max-width: 1260px; text-decoration: none; }
+
+h1#droppoint::before { display: block; content: " "; margin-top: -175px; height: 175px; visibility: hidden; pointer-events: none; }
 
 /*-----------------------------------------------------------------------------------*/
 /* CSS Classes for use in several purposes
