--- a/css/sass/elements/_accessibility.scss
+++ b/css/sass/elements/_accessibility.scss
@@ -51,11 +51,11 @@
 // Avoid problems by users who follow the hash-link to #content 
 // by https://css-tricks.com/hash-tag-links-padding/
 
-h1#droppoint::before {
+#droppoint::before {
   display: block; 
   content: " "; 
-  margin-top: -175px; 
-  height: 175px; 
+  margin-top: -165px; 
+  height: 165px; 
   visibility: hidden; 
   pointer-events: none;
   
