--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version: '1.10.64';
+$version: '1.10.66';
 // Theme Version
 // First Digit:  Manual
 // Second Digit: Branch Version
@@ -15,7 +15,7 @@ $farbfamilie: 'zuv';
 $debugmode: 'false';
 
 // Define fonts
-$fontStack: 'roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontStack: 'Roboto', sans-serif;
 $fontStackSerifs: Georgia, serif;
 $font-family-base: $fontStack;
 $font-path-awesome: './fonts/fontawesome/';
@@ -247,7 +247,6 @@ $font-size-nav-blockquote-cite: 14;
 $font-size-nav-introtext: 15;
 $font-size-nav-flyout-items: 15;
 $font-size-nav-mainlinks: 17;
-$font-size-nav-mainlinks-small: 24;
 
 $font-size-h1: 32;
 $font-size-h1-mobilebranding: 24;
