--- a/css/sass/fonts/_awesome.scss
+++ b/css/sass/fonts/_awesome.scss
@@ -4,12 +4,9 @@
  */
 /* FONT PATH -------------------------- */
 @font-face { font-family: 'FontAwesome'; 
-	     src: url("#{$font-path-awesome}/fontawesome-webfont.eot?v=4.7.0"); 
-	     src: url("#{$font-path-awesome}/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), 
-		 url("#{$font-path-awesome}/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), 
+	     src: url("#{$font-path-awesome}/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), 
 		 url("#{$font-path-awesome}/fontawesome-webfont.woff?v=4.7.0") format("woff"), 
-		 url("#{$font-path-awesome}/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), 
-		 url("#{$font-path-awesome}/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg"); 
+		 url("#{$font-path-awesome}/fontawesome-webfont.ttf?v=4.7.0") format("truetype"); 
 	     font-weight: normal; 
 	     font-style: normal; 
 }
