--- a/css/sass/structure/content/_gallery.scss
+++ b/css/sass/structure/content/_gallery.scss
@@ -2,7 +2,7 @@
 /* Gallery in content 
 /*-----------------------------------------------------------------------------------*/
 
-
+#content
 .image-gallery {
     margin: 10px 0 20px 0;
     clear: both;
@@ -12,26 +12,54 @@
 	    width: 100%;
 	    height: auto;	    
 	}
-   
 	figcaption {
 	    @include px2rem($font-size-image-caption);
 	    color: $PalettonDunkler;
 	    padding: 5px;
 	}
     }
+    figure:not(.with-caption) {
+	img {  
+	    object-fit: cover;
+	    
+	     // Workaround for browsers, that dont know about object-fit yet
+		    min-height: 100%;
+		    min-width: 100%;
+		    width: 100%;
+		    height: auto;
+		    max-width: none;
+		    max-height: none;
+		    display: block;
+		    position: relative;
+		    top: 50%;
+		    left: 50%;
+		    transform: translate(-50%, -50%); 
+	    
+	}
+
+    }
+    
+    
     .grid {
 	.two, 
 	.three,
-	.four {
+	.four, 
+	.five {
 	    .row {
 		display: flex;
 		flex-wrap: wrap;
+		margin-left: 0;
+		margin-right: 0;
+	    }
+	    figure {
+		padding: 5px;
+	
 	    }
 	}
-	.two {
-	    
+	.two {	    
 	    figure {
 		@extend .col-xs-6;
+		
 	    }
 	}
 	.three {
@@ -45,6 +73,14 @@
 		@extend .col-sm-3;
 	    }
 	}
+	.five {
+	    figure {
+		@extend .col-xs-6;
+		@media (min-width: $screen-sm-min) {
+		    width: 20%;
+		}
+	    }
+	}
 	.flexgrid {
 	    display: flex; 
 	    flex-wrap: wrap; 
@@ -53,19 +89,39 @@
 	    figure { 
 		border: 1px solid #e9edf2;
 		text-align: center;
-		width: 160px; 
+		width: 195px; 
+		height: auto;
 		margin: 5px;
+		overflow: hidden;
+		
+	
+	    }
+	    figure:not(.with-caption) { 
+		height: 130px;
 		overflow: hidden;
 		
 		img {
 		    transition: transform 1s;
+		    object-fit: cover;		    
+		    // Workaround for browsers, that dont know about object-fit yet
+		    min-height: 100%;
+		    min-width: 100%;
+		    width: 100%;
+		    height: auto;
+		    max-width: none;
+		    max-height: none;
+		    display: block;
+		    position: relative;
+		    top: 50%;
+		    left: 50%;
+		    transform: translate(-50%, -50%);     
 		}
 		:hover {
 		    img {
-			transform: scale(1.2);
+			transform: translate(-50%, -50%) scale(1.2);
 		    }
 		}
-	    }	
+	    }
 
 	    
 	}
@@ -89,13 +145,22 @@
 	
 	    .slick-slide {
 		cursor: pointer;
-		max-height: 110px;
+		max-height: 120px;
 		overflow: hidden;
 		margin-left: 5px;
 		margin-right: 5px;
-		
+	//	width: calc((100% - 100px) / 5);
+		height: calc((100% - 100px) / 15 * 2);
+		    
+		img {
+		     object-fit: fill;
+		}
+	    
 		
 	    }
+	   
+	    
+	    
 	}
 	.slick-prev,
 	.slick-next {
@@ -143,8 +208,6 @@
 			line-height: 1;
 			color: $colorPrimary;
 			opacity: $slick-opacity-default;
-
-			-webkit-font-smoothing: antialiased;
 
 		}
 
@@ -252,7 +315,7 @@
 	    display: block;
 	    width: 100%;
 	    padding: 0;
-	    margin: 5px auto 15px auto;
+	    margin: 15px auto 15px auto;
 	    list-style: none;
 	    text-align: center;
 	    li {
