--- a/css/sass/structure/content/_gallery.scss
+++ b/css/sass/structure/content/_gallery.scss
@@ -141,7 +141,7 @@
 	}
 	.slider-nav-width {
 	   width: calc(100% - 100px);
-	   margin: 20px auto 0;
+	   margin: 20px auto 10px;
 	
 	    .slick-slide {
 		cursor: pointer;
@@ -162,6 +162,10 @@
 	    
 	    
 	}
+	.slider-nav-width.slick-dotted {
+	    margin-bottom: 30px;
+	}
+	
 	.slick-prev,
 	.slick-next {
 		position: absolute;
