--- a/css/sass/structure/content/_imagelink.scss
+++ b/css/sass/structure/content/_imagelink.scss
@@ -293,7 +293,7 @@
 	    
 	    img {
 		box-shadow: none;
-		max-width: inherit; 
+		max-width: 100%; 
 		display: inline-block;
 		margin: auto;
 		
