--- a/css/sass/elements/_images.scss
+++ b/css/sass/elements/_images.scss
@@ -52,10 +52,9 @@ img {
 }
 
 
-#content {	
+main {	
 	img {
 		@include box-shadow(0 1px 2px rgba(0,0,0,0.3));
-		max-width: 100%;
 				
 		&.shadow {
 		    @include box-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
