sizes bei posts und search

--- a/css/sass/structure/content/_news-items.scss
+++ b/css/sass/structure/content/_news-items.scss
@@ -48,11 +48,14 @@
 	
 	img {
 	    @include box-shadow(none);
-            @media (max-width: $screen-xs - 1) {
-                width: 100%;
-                height: auto;
-            }
-            
+             width: 100%;
+             height: auto;
+	     
+             @media (min-width: $screen-sm) {
+		 max-height: 147px;
+		 width: auto;
+	    }
+	     
 	}
 	
 	@media (min-width: $screen-xs) {
