--- a/css/sass/structure/navigation/_portalmenus.scss
+++ b/css/sass/structure/navigation/_portalmenus.scss
@@ -55,39 +55,43 @@
 		    }
 		}
 
-
-		a.image {
-			text-decoration: none;
-			width: 220px;
-			height: 110px;
-			display: table-cell;
-			vertical-align: bottom;
-			img {
-			    position: relative;
-			    max-width: none;
-			}
-
-			&.ext-link:after {
-				@extend .fa;
-				content: "\f08e";
+		.thumb {
+		    overflow: hidden;
+		    position: relative;
+		     
+		    a {
+			    text-decoration: none;
+			    width: 220px;
+			    height: 110px;
+			    display: block;
+			    
+			    img {
 				position: absolute;
-				top: 0;
-				right: 0px;
-				z-index: 10;
-				height: 20px;
-				width: 20px;
-				background: $colorPrimary;
+				bottom: 0;
+				box-shadow: none;
+			    }
+
+			    &.ext-link:after {
+				    @extend .fa;
+				    content: "\f08e";
+				    position: absolute;
+				    top: 0;
+				    right: 0px;
+				    z-index: 10;
+				    height: 20px;
+				    width: 20px;
+				    background: $colorPrimary;
 
 
-				@include px2rem($font-size-linkicon);
-				color: #fff;
-				font-weight: bolder;
-				text-align: right;
-				padding: 0 2px 0 0;
+				    @include px2rem($font-size-linkicon);
+				    color: #fff;
+				    font-weight: bolder;
+				    text-align: right;
+				    padding: 0 2px 0 0;
 
-			}
+			    }
+		    }
 		}
-
 	    ul {
 		@include no-list;
 	       li {
