--- a/css/sass/structure/navigation/_portalmenus.scss
+++ b/css/sass/structure/navigation/_portalmenus.scss
@@ -58,7 +58,7 @@
 		.thumb {
 		    overflow: hidden;
 		    position: relative;
-		     
+		    @include box-shadow(0 1px 2px rgba(0,0,0,0.3));
 		    a {
 			    text-decoration: none;
 			    width: 220px;
@@ -213,7 +213,9 @@
       	padding: 0;
       }
       &:hover span.portaltop {
-      	background-color: rgba(0, 51, 102, 0.875);
+//      	background-color: rgba(0, 51, 102, 0.875);
+// Wo kommt diese Farbdefinition her?! 
+	background-color: $PalettonDunkelste;
       }
       span.portaltop a {
       	color: #fff;
