--- a/css/sass/structure/content/_news-items.scss
+++ b/css/sass/structure/content/_news-items.scss
@@ -9,8 +9,15 @@
 	    margin-top: -20px;
         }
 	.post-image {
-	    margin-top: 0px;
-	    max-width: 300px;
+	     margin-top: 0px;
+	     @media (min-width: $screen-xs) {
+	        max-width: 50%;
+	     }
+	     @media (min-width: $screen-md) {
+	        max-width: 300px;
+	     }
+		
+	
 	}
 	.subtitle {
 	    padding-top: 0;
