fix float in portalindex pages

--- a/css/sass/structure/widgets/_sidebar.scss
+++ b/css/sass/structure/widgets/_sidebar.scss
@@ -25,6 +25,9 @@
 	.content-portal & {
 		margin-top: 22px;
 	}
+	.page-template-page-portalindex & {
+	    float: right;
+	}
 	
 	@media (min-width: $screen-sm) {
 	    margin-top: 0;
