--- a/css/sass/structure/content/_gallery.scss
+++ b/css/sass/structure/content/_gallery.scss
@@ -92,16 +92,14 @@
 	    figure { 
 		border: 1px solid #e9edf2;
 		text-align: center;
-		width: 195px; 
 		height: auto;
 		margin: 5px;
 		overflow: hidden;
-	
+		flex: 1 1 190px;
 		
 	
 	    }
 	    figure:not(.with-caption) { 
-		height: 130px;
 		overflow: hidden;
 		
 		img {
