--- a/css/sass/structure/widgets/_sidebar.scss
+++ b/css/sass/structure/widgets/_sidebar.scss
@@ -12,14 +12,19 @@
 	.widget {
 		margin-bottom: 22px;
 		margin-top: 22px;
+                
+                @media (min-width: $screen-md) {
+                    h2:first-child {
+                        padding-top: 0;
+                    }
+                }
 	}
 	
 	.widget:last-child {
-		margin-bottom: 0 !important;
+		margin-bottom: 0;
 	}
-	
 	.widget:first-child {
-		margin-top: 0 !important;
+		margin-top: 0;
 	}
 	
 	.content-portal & {
@@ -29,24 +34,15 @@
 	    float: right;
 	}
 	
-	@media (min-width: $screen-sm) {
-	    margin-top: 0;
-	    padding-top: 0;
-	    padding-left: ceil(($fau-gutter-width / 2));	
-	    
-	}
+
 	@media (min-width: $screen-md) {
 	    border-left: 2px solid $colorLightest;
 	    margin-left: $fau-gutter-width;
 	    border-top: none;
+            padding-left: ceil(($fau-gutter-width / 2));	
+            margin-top: 0;
+            padding-top: 0;
 	}
 
 
-}
-
-.startpage-sidebar {
-    .row {
-	margin-left: 0;
-	margin-right: 0;
-    }
 }
