bugfixes (CSS & HTML valid)

--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -314,7 +314,7 @@ span[itemprop="honorificSuffix"] {
     }
     .person-default-more {
 	.person-info {
-	    margin-top: $font-size-base * 1.46;
+	    margin-top: 22px;
 	    margin-top: 1.46rem;
 	}
     }
